fix spacing bug

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -77,7 +77,6 @@ header {
 }
 /* -------------- Body Styling -------------------- */
 #wrapper {
-  height:95vh;
   margin-right: auto;
   margin-left: auto;
   border-radius: 6px;
